2 исправление ошибок автотестов

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
      
       <div class="about__text">
         <h3 class="about__heading">Об аукционе</h3>
-        <p class="main-about-text">
+        <p class="about-text">
           Здесь вы не встретите очередное пафосное собрание невероятно дорогого
           антиквариата. Наши лоты вообще не должны были попасть ни на один
           аукцион. Потому что кому нужен дневник девочки-подростка или картина,
