--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   
     </header>
 
+   <main>
     <div class="cover">
       <div class="overlay"></div>
       <section class="cover__title">
@@ -144,6 +145,7 @@
         </p>
       </div>
     </div>
+   </main> 
     <footer class="footer">
       <div class="header-contacts footer-contacts">
         <p class="number"><a href="tel:+99995555555">+9 999 555 5555</a></p>
