--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
         <div class="about__text">
           <h2 class="about__heading">Об аукционе</h2>
           <p class="about-text">
-            Здесь вы не встретите очередное пафосное собрание невероятно
-            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. 
+            Наши лоты вообще не должны были попасть ни на
             один аукцион. Потому что кому нужен дневник девочки-подростка или
             картина, которую может нарисовать даже ребёнок? Кому нужны все эти
             странные вещи, созданные любителями?
