3 корректировка проекта по замечаниям ревьюэра

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p class="number"><a href="tel:+99995555555">+9 999 555 5555</a></p>
         <p class="mail"><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
         <p class="address">
-          наб. Принсенграхт 263-265, <br />
+          наб. Принсенграхт 263-265, 
           Амстердам
         </p>
       </address>
@@ -55,20 +55,19 @@
         </div>
       </section>
 
-      <section class="lots">
-        <div>
-          <h2 class="lots__heading">лоты</h2>
-        </div>
+      <section class="lots">      
+        <h2 class="lots__heading">лоты</h2>   
 
         <div class="cards">
           <ul class="lots__card-list">
             <li class="lots__card-list-item">
-              <article class="card_type_film">
+              <article class="card_type_film" >
                 <div class="overlay"></div>
-                <h3 class="card__title">
-                  Фильм режиссёра, который <br />
-                  бросил киношколу
+                <h3 class="card__title" href="#0">
+                  <a>Фильм режиссёра, который</a>
+                  <a>бросил киношколу</a>
                 </h3>
+
                 <p class="card__text">
                   Не просто бросил, а ушёл с первой 
                   лекции. Какой была бы ваша ставка, если бы вы не знали, что
@@ -79,13 +78,13 @@
             <li class="lots__card-list-item">
               <article class="card_type_book">
                 <div class="overlay"></div>
-                <h3 class="card__title">
-                  Книга, где описан один <br />
-                  скучный день из жизни <br />
-                  рекламного агента
+                <h3 class="card__title" href="#0">
+                  <a>Книга, где описан один</a> 
+                  <a>скучный день из жизни</a> 
+                  <a>рекламного агента</a>
                 </h3>
 
-                <p class="card__text-book">
+                <p class="card__text">
                   Объёмом почти в тысячу страниц.
                   Иногда без знаков препинания и с 
                   переходами на древнеанглийский.
@@ -102,13 +101,13 @@
             <li class="lots__card-list-item">
               <article class="card_type_picture">
                 <div class="overlay"></div>
-                <h3 class="card__title">
-                  Картина, которую <br />
-                  повторит даже 5-летний <br />
-                  сын маминой подруги
+                <h3 class="card__title" href="#0">
+                  <a>Картина, которую</a>
+                  <a>повторит даже 5-летний</a>
+                  <a>сын маминой подруги</a>
                 </h3>
 
-                <p class="card__text-picture">
+                <p class="card__text">
                   Ну действительно, там линия, тут 
                   кружочек, а здесь и вовсе что-то 
                   похожее на инфузорию-туфельку. 
@@ -127,7 +126,7 @@
         </div>
       </section>
 
-      <div class="about">
+      <section class="about">
         <div class="logo-white">
           <div class="logo-white-div">
             <img
@@ -156,17 +155,17 @@
             продолжали верить их создатели. И сейчас эти лоты стали культовыми.
           </p>
         </div>
-      </div>
+      </section>
     </main>
     <footer class="footer">
-      <div class="footer-contacts">
+      <adress class="footer-contacts">
         <p class="number"><a href="tel:+99995555555">+9 999 555 5555</a></p>
         <p class="mail"><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
         <p class="address">
-          наб. Принсенграхт 263-265, <br />
+          наб. Принсенграхт 263-265,
           Амстердам
         </p>
-      </div>
+      </adress>
       <nav class="nav-list">
         <ul class="nav-list">
           <li class="links-list-item-active">
