4 корректировка по замечаниям ревьюера

--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
           <ul class="lots__card-list">
             <li class="lots__card-list-item">
               <article class="card_type_film" >
-                <div class="overlay"></div>
-                <h3 class="card__title" href="#0">
+                <a class="cards_link" href="#0"></a>
+                <div class="overlay">        
+                </div>
+                <h3 class="card__title">
                   <a>Фильм режиссёра, который</a>
                   <a>бросил киношколу</a>
                 </h3>
@@ -77,8 +79,9 @@
             </li>
             <li class="lots__card-list-item">
               <article class="card_type_book">
+                <a class="cards_link" href="#0"></a>
                 <div class="overlay"></div>
-                <h3 class="card__title" href="#0">
+                <h3 class="card__title">
                   <a>Книга, где описан один</a> 
                   <a>скучный день из жизни</a> 
                   <a>рекламного агента</a>
@@ -100,8 +103,9 @@
             </li>
             <li class="lots__card-list-item">
               <article class="card_type_picture">
+                <a class="cards_link" href="#0"></a>
                 <div class="overlay"></div>
-                <h3 class="card__title" href="#0">
+                <h3 class="card__title">
                   <a>Картина, которую</a>
                   <a>повторит даже 5-летний</a>
                   <a>сын маминой подруги</a>
@@ -158,14 +162,14 @@
       </section>
     </main>
     <footer class="footer">
-      <adress class="footer-contacts">
+      <address class="footer-contacts">
         <p class="number"><a href="tel:+99995555555">+9 999 555 5555</a></p>
         <p class="mail"><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
         <p class="address">
           наб. Принсенграхт 263-265,
           Амстердам
         </p>
-      </adress>
+      </address>
       <nav class="nav-list">
         <ul class="nav-list">
           <li class="links-list-item-active">
